--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -7,6 +7,184 @@
 
 
 /* Application-wide Styles */
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+.app-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.main-content {
+    flex: 1;
+    /* This pushes the footer to the bottom */
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+    font-family: 'Lexend Deca', sans-serif;
+}
+
+ol,
+ul {
+    list-style: none;
+}
+
+blockquote,
+q {
+    quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+/* change scroll bar colour (broken) */
+/* ::-webkit-scrollbar-thumb:hover {
+    background-color: #E46A6B;
+  }
+
+::-webkit-scrollbar-thumb {
+    background-color: #FFFFFF;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #FFFFFF;
+} */
+
+.max-width-container {
+    max-width: 1000px;
+    /* Adjust the maximum width as needed */
+    margin: auto auto;
+    /* Center the content horizontally */
+}
+
 h1 {
     color: #369;
     font-family: Arial, Helvetica, sans-serif;
@@ -30,21 +208,15 @@ header {
     background-blend-mode: overlay;
 }
 
-body {
-    margin: 2em;
-}
-
 /* Footer styles */
 footer {
     text-align: center;
-    padding: 30px 0;
+    padding: 30px;
     background-color: #444;
     color: white;
+    width: 100%;
 }
 
-footer p {
-    margin: 0;
-}
 
 body,
 input[type="text"],
@@ -61,9 +233,7 @@ button {
     color: black;
     font-size: 1.2rem;
     padding: 1rem;
-    margin-right: 1rem;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+    margin: 5px;
 }
 
 button:hover {
